--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="A playground for running the samtools genomics utility in the browser using WebAssembly.">
     <meta name="author" content="Robert Aboukhalil">
 
     <title>bam.bio</title>
@@ -16,11 +16,11 @@
     <link href="dashboard.css" rel="stylesheet">
   </head>
 
-<style>
-.bg-primary { background-color: #4f7ea5 !important; }
-.navbar-brand { box-shadow: none; }
-code { font-family: 'Courier New', Courier, monospace }
-</style>
+  <style>
+  .bg-primary { background-color: #4f7ea5 !important; }
+  .navbar-brand { box-shadow: none; }
+  code { font-family: 'Courier New', Courier, monospace }
+  </style>
 
   <body>
     <nav class="navbar navbar-dark sticky-top bg-primary flex-md-nowrap p-0">
@@ -38,96 +38,51 @@ code { font-family: 'Courier New', Courier, monospace }
         <main role="main" class="col-md-12 ml-sm-auto pt-3 px-4">
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
             <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <button id="btn-example" type="button" class="btn btn-sm btn-primary" disabled>
-                  Load sample data
-                </button>
-              </div>
-
-              <div class="btn-group mr-2">
+              <h4>Samtools Playground</h4>
+              <input type="file" id="file" class="d-none" multiple />
+              <div class="btn-group" style="margin-left:20px">
                 <button id="btn-upload" type="button" class="btn btn-sm btn-outline-secondary" disabled>
-                  Load from my computer
+                  Load local .bam
                 </button>
-                <input type="file" id="file" class="d-none" multiple />
-              </div>
-
-              <!-- <div class="dropdown">
-                <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle" data-toggle="dropdown">
-                  samtools
-                </button>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">--version</a>
-                  <a class="dropdown-item" href="#">view</a>
+                <div class="input-group-append">
+                  <span id="file-local-path" class="input-group-text text-muted">.</span>
                 </div>
               </div>
-   -->
-
-              <!-- <div class="btn-group mr-2">
-                <div class="dropdown">
-                  <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-toggle="dropdown">
-                    Load new dataset
-                  </button>
-                  <div class="dropdown-menu">
-                    <a id="upload" class="dropdown-item" href="#">Load from my computer</a>
-                    <input type="file" id="upload-file" class="d-none" multiple />
-                    <div class="dropdown-divider"></div>
-                    <h6 class="dropdown-header">Sample BAM files</h6>
-                    <a class="dropdown-item" href="#">NA12878</a>
-                    <div id="datasets-user"></div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="dropdown">
-                <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle" data-toggle="dropdown">
-                  Export
-                </button>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">BAM file</a>
-                  <a class="dropdown-item" href="#">SAM file</a>
-                </div>
-              </div>  -->
             </div>
 
-            <!-- data-toggle="tooltip" data-placement="bottom" title="Loading..." -->
-            <!-- $("#status").attr("data-original-title", "value"); -->
             <div id="status" class="float-right">
                 Initializing samtools...
             </div>
           </div>
 
-          <h4>Samtools Playground</h4>
           <div class="row">
-              <div class="col-10">
-
-
-                  <div class="input-group mb-3">
-                    <input id="query" type="text" class="form-control" placeholder="Enter a samtools command, e.g. samtools --help" value="samtools view /urls/DRR01684_merged.chr1.bam 1:17218271-17218472" autofocus>
-                    <div class="input-group-append">
-                      <button class="btn btn-outline-secondary dropdown-toggle"  data-toggle="dropdown">Sample queries</button>
-                      <div class="dropdown-menu">
-                        <h6 class="dropdown-header">Help Screen</h6>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools --help">&nbsp;&nbsp;<code>samtools --help</code></a>
-                        <h6 class="dropdown-header">BAM Stats</h6>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -H /urls/DRR01684_merged.chr1.bam">&nbsp;&nbsp;<code>samtools view -H</code></a>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -c /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -c</code></a>
-                        <h6 class="dropdown-header">Filtering</h6>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -q 60 /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -q 60</code></a>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -F 2 /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -F 2</code></a>
-                      </div>
+              <div class="col-11">
+                <div class="input-group mb-3">
+                  <input id="query" type="text" class="form-control" placeholder="Enter a samtools command, e.g. samtools --help" value="samtools view /urls/DRR01684_merged.chr1.bam 1:17218271-17218472" autofocus>
+                  <div class="input-group-append">
+                    <button class="btn btn-primary">Run</button>
+                    <button class="btn btn-outline-primary dropdown-toggle"  data-toggle="dropdown">Sample queries</button>
+                    <div class="dropdown-menu">
+                      <h6 class="dropdown-header">Help Screen</h6>
+                      <a class="dropdown-item samtool-query" href="#" data-command="samtools --help">&nbsp;&nbsp;<code>samtools --help</code></a>
+                      <h6 class="dropdown-header">BAM Stats</h6>
+                      <a class="dropdown-item samtool-query" href="#" data-command="samtools view -H /urls/DRR01684_merged.chr1.bam">&nbsp;&nbsp;<code>samtools view -H</code></a>
+                      <a class="dropdown-item samtool-query" href="#" data-command="samtools view -c /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -c</code></a>
+                      <h6 class="dropdown-header">Filtering</h6>
+                      <a id="samtool-query-default" class="dropdown-item samtool-query" href="#" data-command="samtools view -q 60 /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -q 60</code></a>
+                      <a class="dropdown-item samtool-query" href="#" data-command="samtools view -F 2 /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -F 2</code></a>
                     </div>
                   </div>
+                </div>
 
-                  <!-- <input id="query" class="form-control" type="text" value="samtools view /urls/DRR01684_merged.chr1.bam 1:17218271-17218472" autofocus> -->
-
-                  <div class="row">
-                    <div class="col-md-2">
-                      <small class="text-muted">
-                        <span id="error">Enter a samtools query</span>
-                      </small>
-                    </div>
+                <div class="row">
+                  <div class="col-md-2">
+                    <small class="text-muted">
+                      <span id="error">Enter a samtools query</span>
+                    </small>
                   </div>
-                  <br />
+                </div>
+                <br />
               </div>
               <div class="col-1 text-center">
                 <input id="rows" class="form-control text-center" type="text" value="100">
@@ -135,19 +90,19 @@ code { font-family: 'Courier New', Courier, monospace }
                     <span>Max rows</span>
                   </small>
               </div>
-              <div class="col-1 text-center">
-                <button id="btn-run" value="Run" class="btn btn-primary col-md-12" disabled>
-                  Run
-                </button>
-                <small class="text-muted">
-                  <span>Or press Enter</span>
-                </small>
-              </div>
           </div>
           <div class="row">
               <div class="col-12">
-                <div id="data" style="width:100%; height:70vh; overflow-y:scroll"></div> 
+                <div id="data" style="width:100%; height:55vh; overflow-y:scroll"></div>
               </div>
+
+              <div class="col-12">
+                <div class="dropdown float-right">
+                  <button id="btn-export" type="button" class="btn btn-sm btn-outline-secondary" disable>
+                    Export as SAM
+                  </button>
+                </div> 
+              </div> 
           </div>
 
         </main>
@@ -176,6 +131,7 @@ code { font-family: 'Courier New', Courier, monospace }
         // Internal state
         this.aioli = null;
         this.maxRows = 100;
+        this.cmd = "";
         this.init();
       }
 
@@ -186,6 +142,7 @@ code { font-family: 'Courier New', Courier, monospace }
         });
 
         // Initialize WASM within WebWorker
+        this.loading();
         return this.aioli.init().then(() => {
           // Once initialized, get samtools version
           this.status("Fetching samtools version...");
@@ -194,11 +151,18 @@ code { font-family: 'Courier New', Courier, monospace }
           this.status(d.stdout[0].split("-")[0]);  // d.stdout[0] ~ "samtools 1.9-xx-xxxxxx"
           this.log(d.stdout.join("\n"));
 
-          // Initialize example
-          this.mount([ "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam", "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam.bai" ]);
+          // // TODO: update files + path
+          // // Mount sample URLs
+          // // this.mount([ "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam", "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam.bai" ]);
+          // this.mount([
+          //   "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam",
+          //   "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam.bai"
+          // ]).then(d => {
+          //   $("#samtool-query-default").click();
+          // });
 
           // Initialize UI
-          $("#btn-upload, #btn-example, #btn-run").attr("disabled", false);
+          this.loaded();
         });
       }
 
@@ -209,8 +173,12 @@ code { font-family: 'Courier New', Courier, monospace }
         });
       }
 
+      isURL(obj) {
+        return typeof(obj) == "string" && (obj.startsWith('http://') || obj.startsWith('https://'));
+      }
+
       // -----------------------------------------------------------------------
-      // Utility functions
+      // Utility functions for UI
       // -----------------------------------------------------------------------
       log(msg) {
         console.log(msg);
@@ -224,8 +192,15 @@ code { font-family: 'Courier New', Courier, monospace }
         $("#error").text(msg);
       }
 
-      isURL(obj) {
-        return typeof(obj) == "string" && (obj.startsWith('http://') || obj.startsWith('https://'));
+      loading() {
+        $("#data").css("opacity", 0.4);
+        $("#btn-upload, #btn-run, btn-export").attr("disabled", true);
+      }
+
+      loaded() {
+        $(".colHeader").hide();  // don't show default headers A, B, ...
+        $("#data").css("opacity", 1);
+        $("#btn-upload, #btn-run, btn-export").attr("disabled", false);
       }
 
       // -----------------------------------------------------------------------
@@ -245,70 +220,96 @@ code { font-family: 'Courier New', Courier, monospace }
           return;
         }
 
-        var config = {}, file_type = "files";
-        if(this.isURL(bamFile) && this.isURL(baiFile))
-          file_type = "urls";
-        config[file_type] = [bamFile, baiFile];
-        app.aioli.mount(config).then(mounted => {
-          console.log("Mounted:", mounted);
-          $("#datasets-user").html(`<h6 class="dropdown-header">From my computer</h6>`);
-          for(var f in mounted) {
-            if(f.split('.').pop() != "bam")
-              continue;
-            $("#datasets-user").append(`<a class="dropdown-item" href="#" data-path="${mounted[f].path}">${f}</a>`);
-          }
-          // console.log(`File ${file.name} mounted to ${d}`)
+        var config = {};
+        var isURL = this.isURL(bamFile) && this.isURL(baiFile);
+        config[isURL ? "urls" : "files"] = [bamFile, baiFile];
+
+        return this.aioli.mount(config).then(mounted => {
+          this.log("Mounted:", mounted);
+          if(isURL)
+            return;
+
+          var bamFilePath = mounted[bamFile.name].path;
+          $("#file-local-path").show().html(`<small>Mounted as <code>${bamFilePath}</code></small>`);
+          return this.query(`samtools view -H ${bamFilePath}`);
         });
       }
 
-      query(query="") {
-        $("#data").css("opacity", "0.4");
-
-        var cmd = query;
-        if(cmd == "")
-          cmd = $("#query").val();
-        else
+      query(query) {
+        this.loading();
+        if(query == null) {
+          query = this.cmd;
           $("#query").val(query);
+        }
 
-        this.maxRows = $("#rows").val();
-        this.exec(cmd).then(out => {
+        this.exec(query).then(out => {
           this.error();
           if(out.stderr != null) {
             this.data(out.stderr.map(d => [d]));
             this.error(out.stderr[0]);
+            this.loaded();
             return;
           }
           if(out.stdout != null)
             this.data(out.stdout.slice(0, this.maxRows).map(d => d.split("\t")));
 
-          $("#data").css("opacity", "1");
+          this.loaded();
         });
       }
 
       data(d=[""]) {
         table.loadData(d);
-        $(".colHeader").hide();
       }
     }
 
-    // Detect choosing file from computer
-    $("#btn-upload").click(() => $("#file").trigger("click"));
-    $("#file").change(function(){ app.mount(this.files); });
-    $("#btn-run").on("click", d => app.query());
-    // Detect pressing Enter
-    $("#query, #rows").on("keyup", e => { if(e.keyCode == 13) app.query(); });
-    // Sample queries
-    $(".samtool-query").on("click", function(){ app.query($(this).attr("data-command")); });
 
-    // Initialize app on page load
+    // =========================================================================
+    // Button behavior
+    // =========================================================================
+
+    // Detect choosing file from computer
+    $("#btn-run").on("click", () => app.query());
+    $("#btn-upload").click(() => $("#file").trigger("click"));
+    $("#file").change(function(){
+      app.mount(this.files);
+    });
+
+    // User inputs
+    $("#query, #rows").on("keyup", e => {
+      app.cmd = $("#query").val();
+      app.maxRows = Number($("#rows").val());
+      if(e.keyCode == 13)
+        app.query();
+    });
+
+    // Sample queries
+    $(".samtool-query").on("click", function(){
+      app.query($(this).attr("data-command"));
+    });
+
+    // Export as TSV
+    $("#btn-export").on("click", () => {
+      table.getPlugin("exportFile")
+           .downloadFile("csv", {
+             columnDelimiter: "\t",
+             rowDelimiter: "\n",
+             fileExtension: "sam",
+             mimeType: "text/tab-separated-values",
+             filename: "bam-export"
+           });
+    })
+
+    // =========================================================================
+    // On page load
+    // =========================================================================
     document.addEventListener("DOMContentLoaded", function() {
       // Setup app
       app = new App();
 
       // Setup data table
-      table = new Handsontable(document.getElementById('data'), {
-        data: [["sdf"]],
-        colHeaders: true,
+      table = new Handsontable(document.getElementById("data"), {
+        data: [[""]],
+        colHeaders: [""],
         //
         rowHeights: 30,
         width: '100%',
@@ -319,7 +320,7 @@ code { font-family: 'Courier New', Courier, monospace }
         filters: true,
         dropdownMenu: ["filter_by_condition", "filter_operators", "filter_by_condition2", "filter_by_value", "filter_action_bar"],
         contextMenu: [],
-        licenseKey: 'non-commercial-and-evaluation'
+        licenseKey: "non-commercial-and-evaluation"
       });
     });
     </script>
