--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
               </button>    
               <div class="btn-group" style="margin-left:10px">
                 <button id="btn-upload" type="button" class="btn btn-sm btn-outline-secondary">
-                  Load local .bam
+                  Load .bam from my computer
                 </button>
                 <div id="file-local" class="input-group-append d-none">
                   <div class="input-group-text">
@@ -62,12 +62,13 @@
                         <h6 class="dropdown-header">Help Screen</h6>
                         <a class="dropdown-item samtool-query" href="#" data-command="samtools --help">&nbsp;&nbsp;<code>samtools --help</code></a>
                         <h6 class="dropdown-header">BAM Stats</h6>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools idxstats /urls/DRR01684_merged.chr1.bam">&nbsp;&nbsp;<code>samtools idxstats</code></a>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -H /urls/DRR01684_merged.chr1.bam">&nbsp;&nbsp;<code>samtools view -H</code></a>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -c /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -c</code></a>
+                        <a class="dropdown-item samtool-query" href="#" data-command="samtools idxstats /urls/A549_CDKN2A.bam">&nbsp;&nbsp;<code>samtools idxstats</code></a>
+                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -H /urls/A549_CDKN2A.bam">&nbsp;&nbsp;<code>samtools view -H</code></a>
+                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -c /urls/A549_CDKN2A.bam 9:21,967,752-21,995,324">&nbsp;&nbsp;<code>samtools view -c</code></a>
                         <h6 class="dropdown-header">Filtering</h6>
-                        <a id="samtool-query-default" class="dropdown-item samtool-query" href="#" data-command="samtools view -q 60 /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -q 60</code></a>
-                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -F 2 /urls/DRR01684_merged.chr1.bam 1:17218271-17218472">&nbsp;&nbsp;<code>samtools view -F 2</code></a>
+                        <a id="samtool-query-default" class="dropdown-item samtool-query" href="#" data-command="samtools view /urls/A549_CDKN2A.bam 9:21,967,752-21,995,324">&nbsp;&nbsp;<code>samtools view</code></a>
+                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -q 10 /urls/A549_CDKN2A.bam 9:21,967,752-21,995,324">&nbsp;&nbsp;<code>samtools view -q 20</code></a>
+                        <a class="dropdown-item samtool-query" href="#" data-command="samtools view -F 2 /urls/A549_CDKN2A.bam 9:21,967,752-21,995,324">&nbsp;&nbsp;<code>samtools view -F 2</code></a>
                       </div>
                     </div>
                   </div>
@@ -111,12 +112,12 @@
     <script src="node_modules/handsontable/dist/handsontable.full.min.js"></script>
     <script src="node_modules/@robertaboukhalil/aioli/aioli.js"></script>
     <script>
-    var app = null, table = null;
+    var app = null, table = null, debug = true;
+    var DIR_SAMPLE_BAM_PREFIX = debug ? "../../../" : "";
     var DIR_IMPORTS = [ "samtools.worker.js" ];
-    // TODO: update files + path
     var DIR_SAMPLE_BAM = [
-      "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam",
-      "https://storage.googleapis.com/wat-bucket/DRR01684_merged.chr1.bam.bai"
+      `${DIR_SAMPLE_BAM_PREFIX}data/A549_CDKN2A.bam`,
+      `${DIR_SAMPLE_BAM_PREFIX}data/A549_CDKN2A.bam.bai`
     ];
 
 
@@ -201,7 +202,7 @@
       // -----------------------------------------------------------------------
 
       isURL(obj) {
-        return typeof(obj) == "string" && (obj.startsWith("http://") || obj.startsWith("https://"));
+        return typeof(obj) == "string" && (!obj.startsWith("/") || obj.startsWith("http://") || obj.startsWith("https://"));
       }
 
       data(d=[""]) {
